# Sputnic

./: .gitignore  CMakeLists.txt  README.md  Sputnic  Sputnic.cpp  globalstar.txt  main.cpp
lib_src/: TerminalOptions.cpp  TerminalOptions.hpp  sgp4sdp4.cpp  sgp4sdp4.hpp  sgp_in.cpp  sgp_math.cpp  sgp_obs.cpp  sgp_time.cpp  user_class.cpp  user_class.hpp
